--- a/extension-manifest-v2/_locales/pl/messages.json
+++ b/extension-manifest-v2/_locales/pl/messages.json
@@ -28,9 +28,6 @@
   "ad": {
     "message": "reklama"
   },
-  "ad_blocking_DESC": {
-    "message": "Blokuj reklamy na odwiedzanych stronach."
-  },
   "additional_permissions_required": {
     "message": "Wymagane dodatkowe uprawnienia"
   },
@@ -59,6 +56,12 @@
   },
   "alert_anti_track_on": {
     "message": "Ochrona przed śledzeniem WŁĄCZONA. Dane osobowe będą anonimizowane."
+  },
+  "alert_autoconsent_off": {
+    "message": "Never-Consent wyłączony."
+  },
+  "alert_autoconsent_on": {
+    "message": "Never-Consent włączony."
   },
   "alert_ghostery_paused": {
     "message": "Rozszerzenie Ghostery zostało wstrzymane."
@@ -89,9 +92,6 @@
   },
   "all_popups": {
     "message": "Wszystkie okienka typu Pop-up"
-  },
-  "all_set__go_with_ghosty_": {
-    "message": "Gotowe! Wybierz ghosty!"
   },
   "already_subscribed": {
     "message": "Już zasubskrybowano"
@@ -138,11 +138,11 @@
   "android_untrust": {
     "message": "Cofnij"
   },
-  "anti_tracking_DESC": {
-    "message": "Anonimizuj odblokowane i nieznane tropiciele aby zapewnić lepszą ochronę przeglądania treści."
-  },
   "any_questions__anytime_": {
     "message": "Masz pytanie? Skontaktuj się z nami!"
+  },
+  "apply_optimal_privacy_settings_": {
+    "message": "Zastosuj optymalne ustawienia prywatności:"
   },
   "are_you_sure_": {
     "message": "Jesteś pewny?"
@@ -410,6 +410,9 @@
     "description": "Part of a confirmation dialog. Clicking this cancels the action.",
     "message": "Anuluj"
   },
+  "by_using_never_consent_you_let_website_owners_know_that_you_re_against_tracking_": {
+    "message": "Używając Never-Consent, informujesz właścicieli stron, że sprzeciwiasz się trackerom!"
+  },
   "cancel": {
     "message": "Anuluj"
   },
@@ -546,8 +549,8 @@
     "message": "CDN",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Sprawdź <a href=\"$${0}\" target=\"_blank\">FAQs</a> lub napisz do nas na adres <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. Chętnie odpowiemy na wszystkie pytania!"
+  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
+    "message": "Sprawdź <a href=\"$${0}\" target=\"_blank\"> FAQ </a> lub napisz do nas na <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Będziemy bardziej niż szczęśliwi, aby porozmawiać z tobą!"
   },
   "choose_your_default_search": {
     "message": "Wybierz domyślną wyszukiwarkę"
@@ -689,6 +692,9 @@
   "done": {
     "message": "Gotowe"
   },
+  "done__go_with_ghosty_": {
+    "message": "Zrobione! Idź z Ghosty!"
+  },
   "download_for_free": {
     "message": "Pobierz bezpłatnie"
   },
@@ -708,6 +714,9 @@
   "enable_ghostery_to_get_started": {
     "message": "Aktywuj Ghostery, aby rozpocząć"
   },
+  "enable_never_consent_": {
+    "message": "Chcesz włączyć Never-Consent?"
+  },
   "enable_when_blacklisted": {
     "message": "Aby użyć tej funkcji, cofnij Zastrzeż stronę."
   },
@@ -725,6 +734,9 @@
   },
   "enhanced_anti_tracking": {
     "message": "Ochrona przed śledzeniem"
+  },
+  "enhanced_autoconsent": {
+    "message": "Never-Consent"
   },
   "error_email_forgot": {
     "message": "Hmm... Nie mogę odnaleźć tego e-maila. Może spróbuj z innym?"
@@ -785,8 +797,8 @@
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery działa tak, aby zatrzymać trackery podczas ich śledzenia i ochronić Twoją prywatność podczas przeglądania internetu!"
   },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery blokuje trackery podczas śledzenia i zapobiega profilowaniu Ciebie i Twoich danych osobowych sprzedawanych brokerom danych dla ich własnego zysku."
+  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
+    "message": "Ghostery zatrzymuje trackery na ich drodze i zapobiega profilowaniu Ciebie i Twoich danych osobowych sprzedawanych brokerom danych."
   },
   "ghostery_privacy_policy": {
     "message": "Polityka prywatności Ghostery"
@@ -813,8 +825,8 @@
     "message": "Hosting",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "Wyrażam zgodę na przesyłanie danych nieosobowych do <a href=\"$${0}\">WhoTracks.Me</a> i akceptuję <a href=\"$${1}\">politykę prywatności</a> Ghostery."
+  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
+    "message": "Wyrażam zgodę na przesyłanie informacji nieosobowych do <a href=\"$${0}\">Ghostery WhoTracks.Me</a>, oraz akceptuję  <a href=\"$${1}\">Politykę Prywatności Ghostery</a> "
   },
   "invalid_email_forgot": {
     "message": "Przykro nam, musisz podać prawdziwy adres e-mail."
@@ -822,14 +834,17 @@
   "invalid_email_login": {
     "message": "Przykro nam, musisz podać prawdziwy adres e-mail."
   },
-  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "Istniejemy dzięki mikrowkładom każdego użytkownika Ghostery, który zdecyduje się wysłać informacje o trackerach do whotracks.me. Dostęp do trackerów umożliwia firmie Ghostery dostarczanie w czasie rzeczywistym informacji o trackerach i zapewnienie ochrony dla całej społeczności użytkowników Ghostery."
+  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
+    "message": "Istnieje dzięki mikrowkładom każdego użytkownika Ghostery, który zdecyduje się wysłać nieosobiste informacje do WhoTracks.Me. Wkład ten umożliwia Ghostery dostarczanie w czasie rzeczywistym informacji o trackerach, co z kolei zapewnia ochronę całej społeczności Ghostery."
   },
   "last_name_field_label": {
     "message": "Nazwisko (opcjonalnie):"
   },
   "learn_more": {
     "message": "Dowiedz się więcej"
+  },
+  "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
+    "message": "Pozwól, aby wtyczka Ghostery pełniła funkcję Twojego obrońcy prywatności i odrzucała wszystkie popupy i trackery, lub zajmij się tym sam!"
   },
   "license_email": {
     "message": "E-mail"
@@ -871,12 +886,21 @@
     "message": "Różne",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "more_information_on_@_0__": {
-    "message": "Więcej informacji na temat $${0}."
+  "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
+    "message": "Więcej informacji o metodologii $${0} w Manifeście Ghostery."
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
     "message": "Ghostery – Bloker reklam chroniący prywatność"
+  },
+  "never_consent": {
+    "message": "Never-Consent"
+  },
+  "never_consent_is_disabled": {
+    "message": "Never-Consent jest nieaktywny"
+  },
+  "never_consent_is_enabled": {
+    "message": "Never-Consent jest aktywny"
   },
   "new_themes": {
     "message": "Nowe tematy"
@@ -886,6 +910,9 @@
   },
   "next_or_start_trial": {
     "message": "Dalej lub Rozpocznij okres próbny"
+  },
+  "no": {
+    "message": "Nie"
   },
   "no_such_email_password_combo": {
     "message": "Wygląda na to, że nie możemy odnaleźć takiej kombinacji adresu e-mail i hasła. Wykonaj ponowną próbę."
@@ -918,8 +945,20 @@
   "off": {
     "message": "Wył."
   },
+  "ok": {
+    "message": "OK"
+  },
+  "ok__i_understand": {
+    "message": "Ok, rozumiem"
+  },
   "on": {
     "message": "Wł."
+  },
+  "on_all_websites": {
+    "message": "dla wszystkich stron"
+  },
+  "on_this_website": {
+    "message": "na tej stronie"
   },
   "options_tracker_wheel_disabled": {
     "message": "Wyłącz licznik tropicieli na pasku narzędzi przeglądarki"
@@ -1444,7 +1483,7 @@
   },
   "settings_new_promotions": {
     "message": "Zawiera promocje produktów"
-	},
+  },
   "settings_notifications": {
     "message": "Powiadomienia"
   },
@@ -1590,9 +1629,6 @@
   },
   "smart_blocking": {
     "message": "Przeglądanie inteligentne"
-  },
-  "smart_blocking_DESC": {
-    "message": "Automatycznie blokuj i odblokowuj tropiciele w celu zoptymalizowania wydajności strony."
   },
   "social_media": {
     "message": "Media społecznościowe",
@@ -1768,17 +1804,14 @@
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "Wtyczka Ghostery Browser jest zainstalowana na twojej przeglądarce, ale Ghosty ucina sobie małą drzemkę."
   },
+  "tired_of_cookie_popups_": {
+    "message": "MASZ JUŻ DOŚĆ PYTAŃ O CIASTECZKA?"
+  },
   "too_many_failed_logins_text": {
     "message": "Zbyt wiele nieudanych prób logowania. Spróbuj ponownie za godzinę."
   },
   "too_many_password_resets_text": {
     "message": "Zbyt wiele żądań zresetowania hasła. Spróbuj ponownie za godzinę."
-  },
-  "tooltip_ad_block_on": {
-    "message": "Zablokowano reklamy."
-  },
-  "tooltip_anti_track_on": {
-    "message": "Zanonimizowane punkty danych osobowych."
   },
   "tooltip_body_in_cliqz": {
     "message": "Funkcja jest już domyślnie aktywna w Cliqz."
@@ -1794,9 +1827,6 @@
   },
   "tooltip_resume": {
     "message": "Wznów Ghostery"
-  },
-  "tooltip_smart_block_on": {
-    "message": "Blokowanie tropicieli dostosowane w celu zoptymalizowania wydajności strony."
   },
   "tooltip_trust": {
     "message": "Zawsze zezwalaj na działanie tropicieli na tej stronie."
@@ -1825,6 +1855,9 @@
   "trackers_detected": {
     "message": "Wykryto"
   },
+  "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
+    "message": "Ghostery wykrył trackery śledzące na tej stronie:&nbsp;$${0}"
+  },
   "trackers_preview": {
     "message": "Podgląd trackerów"
   },
@@ -1844,11 +1877,11 @@
     "message": "Nieznany",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "welcome_to": {
-    "message": "Witaj w"
+  "welcome_to_ghostery": {
+    "message": "Witamy w Ghostery"
   },
   "what_is_whotracks_me_": {
-    "message": "Czym jest whotracks.me?"
+    "message": "Czym jest WhoTracks.Me?"
   },
   "white_black_list_error_invalid_url": {
     "message": "Proszę wpisać prawidłowy adres URL lub wieloznacznik."
@@ -1860,14 +1893,20 @@
     "description": "Options page site trust error message shown when trusting a URL that is already in the trusted sites list.",
     "message": "Ta strona jest już zaufana."
   },
-  "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me, obsługiwany przez Ghostery, jest najbardziej wszechstronnym globalnym zasobem dotyczącym trackerów, zapewniając przejrzystość śledzenia w sieci."
+  "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "WhoTracks.Me, obsługiwany przez Ghostery, jest integralną częścią technologii anty-śledzenia AI Ghostery. Jest to kompleksowy globalny zasób informacji o trackerach, wprowadzający przejrzystość do śledzenia w sieci."
   },
-  "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Z aktywną wtyczką Ghostery możesz od razu przeglądać strony internetowe bezpieczniej, szybciej i z mniejszą ilością irytujących reklam."
+  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
+    "message": "Z włączonym Ghostery przeglądasz strony internetowe bezpieczniej, szybciej i z mniejszą ilością irytujących reklam."
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "W każdej chwili możesz zmienić zdanie i zezwolić Ghostery na rozpoczęcie śledzenia trackerów w Twoim imieniu z poziomu ustawień Ghostery."
+  "yes": {
+    "message": "Tak"
+  },
+  "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
+    "message": "Ustawienia te zawsze możesz zmienić w&nbsp;<strong>Panelu sterowania Ghostery</strong>."
+  },
+  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
+    "message": "W każdej chwili możesz zmienić zdanie i umożliwić Ghostery rozpoczęcie śledzenia trackerów dla Ciebie w panelu Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Postanowiłeś nie aktywować Ghostery!"
