--- a/extension-manifest-v2/_locales/ru/messages.json
+++ b/extension-manifest-v2/_locales/ru/messages.json
@@ -28,9 +28,6 @@
   "ad": {
     "message": "реклама"
   },
-  "ad_blocking_DESC": {
-    "message": "Выполняет блокировку рекламы на страницах, которые вы посещаете."
-  },
   "additional_permissions_required": {
     "message": "Требуются дополнительные разрешения"
   },
@@ -59,6 +56,12 @@
   },
   "alert_anti_track_on": {
     "message": "Анти-трекинг включен. Личные данные будут обезличены."
+  },
+  "alert_autoconsent_off": {
+    "message": "Never-Consent ВЫКЛ."
+  },
+  "alert_autoconsent_on": {
+    "message": "Never-Consent ВКЛ."
   },
   "alert_ghostery_paused": {
     "message": "Работа расширения Ghostery приостановлена."
@@ -89,9 +92,6 @@
   },
   "all_popups": {
     "message": "Все всплывающие окна"
-  },
-  "all_set__go_with_ghosty_": {
-    "message": "Все готово! использовать призрака!"
   },
   "already_subscribed": {
     "message": "Уже подписаны"
@@ -138,11 +138,11 @@
   "android_untrust": {
     "message": "Вернуть"
   },
-  "anti_tracking_DESC": {
-    "message": "Анонимизировать разблокированные и неизвестные трекеры для обеспечения большей защиты браузера."
-  },
   "any_questions__anytime_": {
     "message": "Есть вопросы? Всегда пожалуйста!"
+  },
+  "apply_optimal_privacy_settings_": {
+    "message": "Применить оптимальные настройки конфиденциальности:"
   },
   "are_you_sure_": {
     "message": "Вы уверены?"
@@ -410,6 +410,9 @@
     "description": "Part of a confirmation dialog. Clicking this cancels the action.",
     "message": "Отмена"
   },
+  "by_using_never_consent_you_let_website_owners_know_that_you_re_against_tracking_": {
+    "message": "Используя функцию Never-Consent, вы сообщаете владельцам веб-сайтов, что вы против отслеживания!"
+  },
   "cancel": {
     "message": "Отмена"
   },
@@ -546,8 +549,8 @@
     "message": "СДД",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Посмотрите <a href=\"$${0}\" target=\"_blank\">FAQ</a> или напишите нам на <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. Будем рады пообщаться с вами!"
+  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
+    "message": "Ознакомьтесь с <a href=\"$${0}\" target=\"_blank\">FAQs</a> или напишите нам <a href=\"mailto:$${1}\">$${2}</a>. <br/> Будем рады пообщаться с вами!"
   },
   "choose_your_default_search": {
     "message": "Выбрать поиск по умолчанию"
@@ -689,6 +692,9 @@
   "done": {
     "message": "Готово"
   },
+  "done__go_with_ghosty_": {
+    "message": "Готово! Использовать призрака!"
+  },
   "download_for_free": {
     "message": "Загрузить бесплатно"
   },
@@ -708,6 +714,9 @@
   "enable_ghostery_to_get_started": {
     "message": "Включите Ghostery, чтобы начать работу"
   },
+  "enable_never_consent_": {
+    "message": "Активировать функцию Never-Consent?"
+  },
   "enable_when_blacklisted": {
     "message": "Для использования этой функции отмените включение сайта в список ограниченных"
   },
@@ -725,6 +734,9 @@
   },
   "enhanced_anti_tracking": {
     "message": "Анти-трекинг"
+  },
+  "enhanced_autoconsent": {
+    "message": "Never-Consent"
   },
   "error_email_forgot": {
     "message": "Хм, я не могу найти этот адрес электронной почты. Попробовать другой?"
@@ -785,8 +797,8 @@
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery блокирует трекеры и защищает вашу конфиденциальность!"
   },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery блокирует трекеры и предотвращает профилирование и продажу ваших данных брокерам в коммерческих целях."
+  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
+    "message": "Ghostery блокирует трекеры и предотвращает профилирование и продажу ваших данных брокерам."
   },
   "ghostery_privacy_policy": {
     "message": "Политика конфиденциальности Ghostery"
@@ -813,8 +825,8 @@
     "message": "Хостинг",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "Я соглашаюсь отправлять неличную информацию на <a href=\"$${0}\">WhoTracks.Me</a> и принимаю <a href=\"$${1}\">Политику конфиденциальности</a> Ghostery."
+  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
+    "message": "Я соглашаюсь отправлять неличную информацию на <a href=\"$${0}\">Ghostery’s WhoTracks.Me</a> и принимаю <a href=\"$${1}\">Политику конфиденциальности Ghostery</a> Ghostery."
   },
   "invalid_email_forgot": {
     "message": "Извините, вам необходимо ввести настоящий адрес электронной почты."
@@ -822,14 +834,17 @@
   "invalid_email_login": {
     "message": "Извините, вам необходимо ввести настоящий адрес электронной почты."
   },
-  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "Он существует благодаря микровкладам каждого пользователя Ghostery, отправляющего информацию о трекере на сайт whotracks.me. Данные с трекеров позволяют Ghostery оперативно предоставлять информацию о трекерах и защите всему сообществу Ghostery."
+  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
+    "message": "Он существует благодаря микровкладам каждого пользователя Ghostery, отправляющего неперсональную информацию на WhoTracks.Me. Данные позволяют Ghostery оперативно предоставлять информацию о трекерах, что взамен обеспечивает защиту всего сообщества Ghostery."
   },
   "last_name_field_label": {
     "message": "Фамилия (необязательно):"
   },
   "learn_more": {
     "message": "Подробнее"
+  },
+  "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
+    "message": "Позвольте Ghostery стать вашим комплексным защитником конфиденциальности и отклонять за вас все всплывающие окна и отслеживание или делайте это самостоятельно!"
   },
   "license_email": {
     "message": "Email"
@@ -871,12 +886,21 @@
     "message": "Разное",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "more_information_on_@_0__": {
-    "message": "Дополнительная информация о $${0}."
+  "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
+    "message": "Дополнительная информация о методологии $${0} в Декларации Ghostery."
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
     "message": "Ghostery – Конфиденциальный Блокировщик Рекламы"
+  },
+  "never_consent": {
+    "message": "Never-Consent"
+  },
+  "never_consent_is_disabled": {
+    "message": "Функция Never-Consent отключена"
+  },
+  "never_consent_is_enabled": {
+    "message": "Функция Never-Consent включена"
   },
   "new_themes": {
     "message": "Новые темы"
@@ -886,6 +910,9 @@
   },
   "next_or_start_trial": {
     "message": "Далее или испытать пробную версию"
+  },
+  "no": {
+    "message": "Нет"
   },
   "no_such_email_password_combo": {
     "message": "Похоже, мы не можем найти эту комбинацию электронной почты и пароля.  Попробуйте еще раз."
@@ -918,8 +945,20 @@
   "off": {
     "message": "Выкл"
   },
+  "ok": {
+    "message": "OK"
+  },
+  "ok__i_understand": {
+    "message": "Да, я понимаю"
+  },
   "on": {
     "message": "Вкл"
+  },
+  "on_all_websites": {
+    "message": "на всех веб-сайтах"
+  },
+  "on_this_website": {
+    "message": "на этом веб-сайте"
   },
   "options_tracker_wheel_disabled": {
     "message": "Отключить Tracker Wheel на панели инструментов браузера"
@@ -1591,9 +1630,6 @@
   "smart_blocking": {
     "message": "Смарт-Браузинг"
   },
-  "smart_blocking_DESC": {
-    "message": "Автоматически блокирует и разблокирует трекеры для оптимизации работы страницы."
-  },
   "social_media": {
     "message": "Социальные сети",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
@@ -1768,17 +1804,14 @@
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "Расширение Ghostery Browser Extension установлено в вашем браузере, но Ghosty пока дремлет."
   },
+  "tired_of_cookie_popups_": {
+    "message": "УСТАЛИ ОТ ВСПЛЫВАЮЩИХ УВЕДОМЛЕНИЙ О ФАЙЛАХ COOKIE?"
+  },
   "too_many_failed_logins_text": {
     "message": "Слишком много неудачных попыток входа. Повторите попытку через час."
   },
   "too_many_password_resets_text": {
     "message": "Слишком много запросов на сброс пароля. Повторите попытку через один час."
-  },
-  "tooltip_ad_block_on": {
-    "message": "Реклама заблокирована."
-  },
-  "tooltip_anti_track_on": {
-    "message": "Личные данные обезличены."
   },
   "tooltip_body_in_cliqz": {
     "message": "Функция уже активирована в Cliqz по умолчанию."
@@ -1794,9 +1827,6 @@
   },
   "tooltip_resume": {
     "message": "Возобновить работу Ghostery"
-  },
-  "tooltip_smart_block_on": {
-    "message": "Блокировка трекеров откорректирована для оптимизации работы страницы."
   },
   "tooltip_trust": {
     "message": "Всегда разрешать трекеры на этом сайте."
@@ -1825,6 +1855,9 @@
   "trackers_detected": {
     "message": "Обнаружено"
   },
+  "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
+    "message": "Трекеры, обнаруженные Ghostery на этом сайте:&nbsp;$${0}"
+  },
   "trackers_preview": {
     "message": "Предварительный просмотр трекеров"
   },
@@ -1844,11 +1877,11 @@
     "message": "Неизвестный",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "welcome_to": {
-    "message": "Добро пожаловать в"
+  "welcome_to_ghostery": {
+    "message": "Добро пожаловать в Ghostery"
   },
   "what_is_whotracks_me_": {
-    "message": "Что такое whotracks.me?"
+    "message": "Что такое WhoTracks.Me?"
   },
   "white_black_list_error_invalid_url": {
     "message": "Введите действительный адрес URL или подстановочный знак."
@@ -1860,14 +1893,20 @@
     "description": "Options page site trust error message shown when trusting a URL that is already in the trusted sites list.",
     "message": "Этот сайт уже в списке доверенных."
   },
-  "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me, управляемый Ghostery, — наиболее полный глобальный ресурс по трекерам, обеспечивающий прозрачность отслеживания."
+  "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "WhoTracks.Me, управляемый Ghostery, является неотъемлемой частью технологии Ghostery ИИ, предотвращающей отслеживание. Это наиболее полный глобальный ресурс по трекерам, обеспечивающий прозрачность отслеживания."
   },
-  "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "С включенным Ghostery вы мгновенно переходите на более безопасный, быстрый и менее раздражающий рекламой веб-браузер."
+  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
+    "message": "С включенным Ghostery вы мгновенно переходите на более безопасный, быстрый и менее раздражающий просмотр веб-сайтов."
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "Вы можете передумать в любое время и разрешить Ghostery начать отслеживать трекеры за вас в настройках Ghostery."
+  "yes": {
+    "message": "Да"
+  },
+  "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
+    "message": "Вы всегда можете изменить эти настройки в&nbsp;<strong>панели управления Ghostery</strong>."
+  },
+  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
+    "message": "Вы можете передумать в любое время и разрешить Ghostery начать отслеживать трекеры за вас в панели Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Вы решили пропустить включение Ghostery!"
