--- a/extension-manifest-v2/_locales/de/messages.json
+++ b/extension-manifest-v2/_locales/de/messages.json
@@ -28,9 +28,6 @@
   "ad": {
     "message": "Werbung"
   },
-  "ad_blocking_DESC": {
-    "message": "Blockieren von Werbung auf Seiten, die Sie besuchen."
-  },
   "additional_permissions_required": {
     "message": "Zusätzliche Berechtigungen erforderlich"
   },
@@ -59,6 +56,12 @@
   },
   "alert_anti_track_on": {
     "message": "Anti-Tracking EINGESCHALTET. Persönliche Daten werden anonymisiert."
+  },
+  "alert_autoconsent_off": {
+    "message": "Niemals-Einwilligen AUS."
+  },
+  "alert_autoconsent_on": {
+    "message": "Niemals-Einwilligen AN."
   },
   "alert_ghostery_paused": {
     "message": "Ghostery-Erweiterung wurde unterbrochen."
@@ -89,9 +92,6 @@
   },
   "all_popups": {
     "message": "Alle Popups"
-  },
-  "all_set__go_with_ghosty_": {
-    "message": "Alles bereit! Geh mit Ghosty!"
   },
   "already_subscribed": {
     "message": "Bereits abonniert"
@@ -138,11 +138,11 @@
   "android_untrust": {
     "message": "Rückgängig machen"
   },
-  "anti_tracking_DESC": {
-    "message": "Anonymisieren Sie entsperrte und unbekannte Tracker für besseren Browsing-Schutz."
-  },
   "any_questions__anytime_": {
     "message": "Haben Sie Fragen? Wir sind immer für Sie da!"
+  },
+  "apply_optimal_privacy_settings_": {
+    "message": "Privatsphäreeinstellungen optimal anwenden:"
   },
   "are_you_sure_": {
     "message": "Sind Sie sicher?"
@@ -410,6 +410,9 @@
     "description": "Part of a confirmation dialog. Clicking this cancels the action.",
     "message": "Abbrechen"
   },
+  "by_using_never_consent_you_let_website_owners_know_that_you_re_against_tracking_": {
+    "message": "Durch Never-Consent erklären Sie Website-Besitzern, Tracking abzulehnen!"
+  },
   "cancel": {
     "message": "Abbrechen"
   },
@@ -546,8 +549,8 @@
     "message": "CDN",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Sehen Sie sich die <a href=\"$${0}\" target=\"_blank\">FAQs</a> an oder schreiben Sie uns an <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. Wir helfen Ihnen gerne weiter!"
+  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
+    "message": "Sieh dir die <a href=\"$${0}\" target=\"_blank\"> FAQs </a> an oder schreibe uns eine E-Mail an <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Wir freuen uns darauf, mit dir zu sprechen!"
   },
   "choose_your_default_search": {
     "message": "Standard-Suche wählen"
@@ -689,6 +692,9 @@
   "done": {
     "message": "Erledigt"
   },
+  "done__go_with_ghosty_": {
+    "message": "Erledigt! Auf gehts!"
+  },
   "download_for_free": {
     "message": "Kostenlos herunterladen"
   },
@@ -708,6 +714,9 @@
   "enable_ghostery_to_get_started": {
     "message": "Aktivieren Sie Ghostery, um loszulegen"
   },
+  "enable_never_consent_": {
+    "message": "Never-Consent aktivieren?"
+  },
   "enable_when_blacklisted": {
     "message": "„Website einschränken“ annullieren, um diese Funktion zu nutzen."
   },
@@ -725,6 +734,9 @@
   },
   "enhanced_anti_tracking": {
     "message": "Anti-Tracking"
+  },
+  "enhanced_autoconsent": {
+    "message": "Never-Consent"
   },
   "error_email_forgot": {
     "message": "Hmm, ich kann diese E-Mail-Adresse nicht finden. Wollen Sie es nochmals versuchen?"
@@ -785,8 +797,8 @@
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery ist so eingestellt, dass es Tracker stoppt und Ihre Privatsphäre beim Browsen schützt!"
   },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery stoppt Tracker und verhindert, dass Sie profiliert werden und Ihre persönlichen Informationen an Datenmakler für deren eigenen Profit verkauft werden."
+  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
+    "message": "Ghostery stoppt Tracker in ihren Gleisen und verhindert, dass ein Daten-Profil über dich erstellt wird und deine persönlichen Informationen an Datenhändler verkauft werden."
   },
   "ghostery_privacy_policy": {
     "message": "Ghostery-Datenschutzrichtlinie"
@@ -813,8 +825,8 @@
     "message": "Hosting",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "Ich stimme zu, nicht-personenbezogene Daten an <a href=\"$${0}\">WhoTracks.Me</a> zu senden und akzeptiere die Ghostery<a href=\"$${1}\">-Datenschutzbestimmungen</a>"
+  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
+    "message": "Ich stimme zu, nicht-personenbezogene Daten an <a href=\"$${0}\"> Ghostery's WhoTracks.Me </a> zu senden, und akzeptiere die <a href=\"$${1}\"> Ghostery Datenschutzbestimmungen </a> "
   },
   "invalid_email_forgot": {
     "message": "Verzeihung, Sie müssen eine echte E-Mail-Adresse eingeben."
@@ -822,14 +834,17 @@
   "invalid_email_login": {
     "message": "Verzeihung, Sie müssen eine echte E-Mail-Adresse eingeben."
   },
-  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "Es existiert dank der Mikro-Beiträge jedes Ghostery-Nutzers, der sich entscheidet, Tracker-Informationen an whotracks.me zu senden. Der Tracker-Input ermöglicht es Ghostery, Echtzeit-Informationen über Tracker und Schutz für die gesamte Ghostery-Nutzergemeinschaft zu bieten."
+  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
+    "message": "Es existiert dank der Beiträge jedes Ghostery-Nutzers, der sich dafür entscheidet, nicht-personenbezogene Informationen an WhoTracks.Me zu senden. Diese Informationen ermöglichen es Ghostery, Echtzeitinformationen über Tracker zu liefern, die wiederum die gesamte Ghostery-Gemeinschaft schützen."
   },
   "last_name_field_label": {
     "message": "Nachname (Optional):"
   },
   "learn_more": {
     "message": "Weitere Informationen"
+  },
+  "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
+    "message": "Machen Sie Ghostery zum Rundumschutz für Ihre Privatsphäre, der Popups und Tracking ablehnt, oder tun Sie es selbst!"
   },
   "license_email": {
     "message": "E-Mail-Adresse"
@@ -871,12 +886,21 @@
     "message": "Sonstiges",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "more_information_on_@_0__": {
-    "message": "Mehr Informationen über $${0}."
+  "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
+    "message": "Weitere Informationen zur $${0}-Methode findest du im Ghostery-Manifest."
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
     "message": "Ghostery – Datenschutzorientierter Werbeblocker"
+  },
+  "never_consent": {
+    "message": "Never-Consent"
+  },
+  "never_consent_is_disabled": {
+    "message": "Never-Consent ist deaktiviert"
+  },
+  "never_consent_is_enabled": {
+    "message": "Never-Consent ist aktiviert"
   },
   "new_themes": {
     "message": "Neue Themes"
@@ -886,6 +910,9 @@
   },
   "next_or_start_trial": {
     "message": "Weiter oder Testversion starten"
+  },
+  "no": {
+    "message": "Nein"
   },
   "no_such_email_password_combo": {
     "message": "Anscheinend können wir diese Kombination aus E-Mail und Passwort nicht finden. Versuchen Sie es noch einmal."
@@ -918,8 +945,20 @@
   "off": {
     "message": "Aus"
   },
+  "ok": {
+    "message": "OK"
+  },
+  "ok__i_understand": {
+    "message": "Ok, ich verstehe"
+  },
   "on": {
     "message": "An"
+  },
+  "on_all_websites": {
+    "message": "auf allen Websites"
+  },
+  "on_this_website": {
+    "message": "auf dieser Website"
   },
   "options_tracker_wheel_disabled": {
     "message": "Tracker-Rad in der Browser-Symbolleiste deaktivieren"
@@ -1591,9 +1630,6 @@
   "smart_blocking": {
     "message": "Intelligentes Surfen"
   },
-  "smart_blocking_DESC": {
-    "message": "Tracker automatisch blockieren und entsperren, um die Seitenperformance zu optimieren."
-  },
   "social_media": {
     "message": "Social Media",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
@@ -1768,17 +1804,14 @@
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "Die Ghostery-Browsererweiterung ist in Ihrem Browser installiert, aber Ghosty macht gerade eine kleine Pause."
   },
+  "tired_of_cookie_popups_": {
+    "message": "HABEN SIE GENUG VON COOKIE-POPUPS?"
+  },
   "too_many_failed_logins_text": {
     "message": "Zu viele fehlgeschlagene Anmeldeversuche. Versuchen Sie es in einer Stunde erneut."
   },
   "too_many_password_resets_text": {
     "message": "Zu viele Anforderungen zur Passwortzurücksetzung gesendet. Versuchen Sie es in einer Stunde erneut."
-  },
-  "tooltip_ad_block_on": {
-    "message": "Werbung wurde gesperrt."
-  },
-  "tooltip_anti_track_on": {
-    "message": "Persönliche Datenpunkte anonymisiert."
   },
   "tooltip_body_in_cliqz": {
     "message": "Bereits als Standard in Cliqz aktiviert."
@@ -1794,9 +1827,6 @@
   },
   "tooltip_resume": {
     "message": "Ghostery fortsetzen"
-  },
-  "tooltip_smart_block_on": {
-    "message": "Tracker-Blockierung wurde angepasst, um die Seitenleistung zu optimieren."
   },
   "tooltip_trust": {
     "message": "Tracker auf dieser Website immer zulassen."
@@ -1825,6 +1855,9 @@
   "trackers_detected": {
     "message": "Erkannte"
   },
+  "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
+    "message": "Von Ghostery erkannte Tracker auf dieser Website:&nbsp;$${0}"
+  },
   "trackers_preview": {
     "message": "Tracker-Vorschau"
   },
@@ -1844,11 +1877,11 @@
     "message": "Unbekannt",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "welcome_to": {
-    "message": "Willkommen bei"
+  "welcome_to_ghostery": {
+    "message": "Willkommen bei Ghostery"
   },
   "what_is_whotracks_me_": {
-    "message": "Was ist whotracks.me?"
+    "message": "Was ist WhoTracks.Me?"
   },
   "white_black_list_error_invalid_url": {
     "message": "Geben Sie eine gültige URL oder einen Platzhalter ein."
@@ -1860,14 +1893,20 @@
     "description": "Options page site trust error message shown when trusting a URL that is already in the trusted sites list.",
     "message": "Diese Website ist bereits als vertrauenswürdig eingestuft."
   },
-  "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me wird von Ghostery betrieben und ist die umfassendste globale Ressource für Tracker, die Transparenz in das Web-Tracking bringt."
+  "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "WhoTracks.Me wird von Ghostery betrieben und ist ein Bestandteil der Ghostery KI-Anti-Tracking-Technologie. Es ist eine umfassende globale Quelle für Tracker und bringt Transparenz in das Web-Tracking."
   },
-  "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Wenn Ghostery aktiviert ist, können Sie sofort sicherer, schneller und mit weniger lästiger Werbung im Internet surfen."
+  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
+    "message": "Wenn du Ghostery aktivierst, kannst du sofort sicher, schneller und mit weniger lästiger Werbung surfen."
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "Sie können Ihre Meinung jederzeit ändern und Ghostery in den Ghostery-Einstellungen aktivieren, um Tracker für Sie zu verfolgen."
+  "yes": {
+    "message": "Ja"
+  },
+  "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
+    "message": "Sie können diese Einstellungen im <strong>Ghostery-Steuerbereich</strong> ändern."
+  },
+  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
+    "message": "Du kannst deine Meinung jederzeit ändern und Ghostery aktivieren, die Tracker für dich im Ghostery-Panel zu verfolgen."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Sie haben sich entschieden, Ghostery nicht zu aktivieren!"
