--- a/extension-manifest-v2/_locales/es/messages.json
+++ b/extension-manifest-v2/_locales/es/messages.json
@@ -28,9 +28,6 @@
   "ad": {
     "message": "anuncio"
   },
-  "ad_blocking_DESC": {
-    "message": "Bloquea anuncios en las páginas web que visites."
-  },
   "additional_permissions_required": {
     "message": "Se requieren permisos adicionales"
   },
@@ -59,6 +56,12 @@
   },
   "alert_anti_track_on": {
     "message": "Antirrastreadores SÍ. Los datos personales serán anónimos."
+  },
+  "alert_autoconsent_off": {
+    "message": "Nunca-Consentir NO."
+  },
+  "alert_autoconsent_on": {
+    "message": "Nunca-Consentir SÍ."
   },
   "alert_ghostery_paused": {
     "message": "Se ha pausado la extensión Ghostery."
@@ -89,9 +92,6 @@
   },
   "all_popups": {
     "message": "Todas las ventanas emergentes"
-  },
-  "all_set__go_with_ghosty_": {
-    "message": "¡Todo listo! vamos con ghosty!"
   },
   "already_subscribed": {
     "message": "Ya te has suscrito"
@@ -138,11 +138,11 @@
   "android_untrust": {
     "message": "Deshacer"
   },
-  "anti_tracking_DESC": {
-    "message": "Anonimiza los rastreadores desbloqueados y desconocidos para una mayor protección de navegación."
-  },
   "any_questions__anytime_": {
     "message": "¿Preguntas? ¡Cuando quieras!"
+  },
+  "apply_optimal_privacy_settings_": {
+    "message": "Aplicar ajustes de privacidad óptimos:"
   },
   "are_you_sure_": {
     "message": "¿Seguro?"
@@ -410,6 +410,9 @@
     "description": "Part of a confirmation dialog. Clicking this cancels the action.",
     "message": "Cancelar"
   },
+  "by_using_never_consent_you_let_website_owners_know_that_you_re_against_tracking_": {
+    "message": "Al usar Never-Consent, les haces saber a los propietarios de sitios web que te opones al seguimiento."
+  },
   "cancel": {
     "message": "Cancelar"
   },
@@ -546,8 +549,8 @@
     "message": "CDN",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Consulta las <a href=\"$${0}\" target=\"_blank\">preguntas frecuentes</a> o escríbenos a <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>. ¡Nos encanta poder hablar contigo!"
+  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
+    "message": "Consulta las preguntas frecuentes de <a href=\"$${0}\" target=\"_blank\"> </a> o escríbenos a <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Estaremos encantados de hablar contigo."
   },
   "choose_your_default_search": {
     "message": "Elige tu búsqueda predeterminada"
@@ -689,6 +692,9 @@
   "done": {
     "message": "Hecho"
   },
+  "done__go_with_ghosty_": {
+    "message": "¡Ya está! ¡Vaya con Ghosty!"
+  },
   "download_for_free": {
     "message": "Descarga gratuita"
   },
@@ -708,6 +714,9 @@
   "enable_ghostery_to_get_started": {
     "message": "Activa Ghostery para empezar"
   },
+  "enable_never_consent_": {
+    "message": "¿Habilitar Never-Consent?"
+  },
   "enable_when_blacklisted": {
     "message": "Para usar esta función, anula Restringir sitio."
   },
@@ -725,6 +734,9 @@
   },
   "enhanced_anti_tracking": {
     "message": "Antirrastreadores"
+  },
+  "enhanced_autoconsent": {
+    "message": "Never-Consent"
   },
   "error_email_forgot": {
     "message": "Vaya, no puedo encontrar esa dirección. ¿Quieres probar con otra?"
@@ -785,8 +797,8 @@
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "¡Ghostery está listo para detener a los rastreadores y proteger tu privacidad mientras navegas!"
   },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery les para los pies a los rastreadores evitando que realicen perfiles sobre ti y que tu información personal se venda a intermediarios de datos para su propio beneficio."
+  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
+    "message": "Ghostery detiene a los rastreadores en su camino y evita que se elaboren perfiles y se venda tu información personal a los corredores de datos."
   },
   "ghostery_privacy_policy": {
     "message": "Política de privacidad de Ghostery"
@@ -813,8 +825,8 @@
     "message": "Hosting",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "Acepto enviar información no personal a <a href=\"$${0}\">WhoTracks.Me</a> y acepto la <a href=\"$${1}\">Política de privacidad</a> de Ghostery"
+  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
+    "message": "Acepto el envío de información no personal a <a href=\"$${0}\"> WhoTracks.Me de Ghostery </a>, y acepto la política de privacidad de <a href=\"$${1}\"> Ghostery </a> "
   },
   "invalid_email_forgot": {
     "message": "Lo sentimos, pero debes indicar una dirección de correo electrónico real."
@@ -822,14 +834,17 @@
   "invalid_email_login": {
     "message": "Lo sentimos, pero debes indicar una dirección de correo electrónico real."
   },
-  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "Existe gracias a las microcontribuciones de aquellos usuarios de Ghostery que eligen enviar información de seguimiento a whotracks.me. La entrada del rastreador permite a Ghostery proporcionar información en tiempo real sobre rastreadores y protección a toda la comunidad de usuarios de Ghostery."
+  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
+    "message": "Existe gracias a las microcontribuciones de cada usuario de Ghostery que decide enviar información no personal a WhoTracks.Me. Esta aportación permite a Ghostery proporcionar información en tiempo real sobre los rastreadores, lo que a su vez proporciona protección a toda la comunidad de Ghostery."
   },
   "last_name_field_label": {
     "message": "Apellidos (opcional):"
   },
   "learn_more": {
     "message": "Saber más"
+  },
+  "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
+    "message": "Permite que Ghostery sea tu defensor de la privacidad y rechace todas las ventanas emergentes y el seguimiento... ¡o hazlo tú personalmente!"
   },
   "license_email": {
     "message": "Correo electrónico"
@@ -871,12 +886,21 @@
     "message": "Miscelánea",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "more_information_on_@_0__": {
-    "message": "Más información sobre $${0}."
+  "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
+    "message": "Más información sobre la metodología $${0} en el Manifiesto de Ghostery."
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
     "message": "Ghostery – Bloqueador de anuncios para privacidad"
+  },
+  "never_consent": {
+    "message": "Never-Consent"
+  },
+  "never_consent_is_disabled": {
+    "message": "Never-Consent está desactivado"
+  },
+  "never_consent_is_enabled": {
+    "message": "Never-Consent está activado"
   },
   "new_themes": {
     "message": "Temas nuevos"
@@ -886,6 +910,9 @@
   },
   "next_or_start_trial": {
     "message": "Siguiente o Iniciar prueba"
+  },
+  "no": {
+    "message": "No"
   },
   "no_such_email_password_combo": {
     "message": "Parece que no hemos podido encontrar esta combinación de correo electrónico y contraseña. Prueba otra vez."
@@ -918,8 +945,20 @@
   "off": {
     "message": "No"
   },
+  "ok": {
+    "message": "Vale"
+  },
+  "ok__i_understand": {
+    "message": "De acuerdo, entiendo"
+  },
   "on": {
     "message": "Sí"
+  },
+  "on_all_websites": {
+    "message": "en todos los sitios web"
+  },
+  "on_this_website": {
+    "message": "en este sitio web"
   },
   "options_tracker_wheel_disabled": {
     "message": "Desactivar rueda del rastreador en la barra de herramientas del navegador"
@@ -1591,9 +1630,6 @@
   "smart_blocking": {
     "message": "Navegación inteligente"
   },
-  "smart_blocking_DESC": {
-    "message": "Bloquea y desbloquea automáticamente los rastreadores para optimizar el rendimiento de la página."
-  },
   "social_media": {
     "message": "Redes sociales",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
@@ -1768,17 +1804,14 @@
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "La extensión del navegador Ghostery está instalada en su navegador, pero Ghosty se está echando una siestecita."
   },
+  "tired_of_cookie_popups_": {
+    "message": "¿TE HAS CANSADO DE LAS VENTANAS SOBRE LAS COOKIES?"
+  },
   "too_many_failed_logins_text": {
     "message": "Demasiados inicios de sesión fallidos. Vuelve a intentarlo dentro de una hora."
   },
   "too_many_password_resets_text": {
     "message": "Demasiadas solicitudes de restablecimiento de contraseña. Vuelve a intentarlo dentro de una hora."
-  },
-  "tooltip_ad_block_on": {
-    "message": "Se ha bloqueado el anuncio."
-  },
-  "tooltip_anti_track_on": {
-    "message": "Puntos de datos personales anonimizados."
   },
   "tooltip_body_in_cliqz": {
     "message": "Función ya activada por defecto en Clicqz."
@@ -1794,9 +1827,6 @@
   },
   "tooltip_resume": {
     "message": "Continuar"
-  },
-  "tooltip_smart_block_on": {
-    "message": "Se ajustará el bloqueador de rastreadores para optimizar el rendimiento de la página."
   },
   "tooltip_trust": {
     "message": "Permitir siempre rastreadores en este sitio."
@@ -1825,6 +1855,9 @@
   "trackers_detected": {
     "message": "Detectado"
   },
+  "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
+    "message": "Rastreadores detectados por Ghostery en esta página web:&nbsp;$${0}"
+  },
   "trackers_preview": {
     "message": "Vista previa de rastreadores"
   },
@@ -1844,11 +1877,11 @@
     "message": "Desconocido",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "welcome_to": {
-    "message": "Te damos la bienvenida a"
+  "welcome_to_ghostery": {
+    "message": "Bienvenido a Ghostery"
   },
   "what_is_whotracks_me_": {
-    "message": "¿Qué es whotracks.me?"
+    "message": "¿Qué es WhoTracks.Me?"
   },
   "white_black_list_error_invalid_url": {
     "message": "Introduce un URL o comodín válidos."
@@ -1860,14 +1893,20 @@
     "description": "Options page site trust error message shown when trusting a URL that is already in the trusted sites list.",
     "message": "Este ya es un sitio de confianza."
   },
-  "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.me, operado por Ghostery, es el recurso global más completo sobre rastreadores y permite aportar mayor transparencia al seguimiento web."
+  "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "WhoTracks.Me, operado por Ghostery, es una parte integral de la tecnología anti-seguimiento de Ghostery. Es un recurso global completo sobre rastreadores, que aporta transparencia al rastreo web."
   },
-  "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Al habilitar Ghostery, puedes navegar por la web de manera más segura, más rápida y con anuncios menos molestos instantáneamente."
+  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
+    "message": "Con Ghostery activado, navegas instantáneamente por la web de forma más segura, más rápida y con menos anuncios molestos."
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "Si cambias de opinión en cualquier momento, también puedes hacer que Ghostery comience a vigilar a los rastreadores por ti en la configuración de Ghostery."
+  "yes": {
+    "message": "Sí"
+  },
+  "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
+    "message": "Siempre puedes cambiar estos ajustes en el&nbsp;<strong>panel de control de Ghostery</strong>."
+  },
+  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
+    "message": "Puedes cambiar de opinión en cualquier momento y permitir que Ghostery empiece a seguir los rastreadores por ti en el panel de Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "¡Has elegido no habilitar Ghostery!"
