--- a/extension-manifest-v2/_locales/ko/messages.json
+++ b/extension-manifest-v2/_locales/ko/messages.json
@@ -28,9 +28,6 @@
   "ad": {
     "message": "광고"
   },
-  "ad_blocking_DESC": {
-    "message": "방문하는 웹 페이지의 광고를 차단합니다."
-  },
   "additional_permissions_required": {
     "message": "추가 권한 필요"
   },
@@ -59,6 +56,12 @@
   },
   "alert_anti_track_on": {
     "message": "추적 방지 켜짐. 개인 데이터가 익명화됩니다."
+  },
+  "alert_autoconsent_off": {
+    "message": "동의하지 않음 끄기."
+  },
+  "alert_autoconsent_on": {
+    "message": "동의하지 않음 켜기."
   },
   "alert_ghostery_paused": {
     "message": "Ghostery 확장 프로그램이 일시 중지되었습니다."
@@ -89,9 +92,6 @@
   },
   "all_popups": {
     "message": "팝업 전체"
-  },
-  "all_set__go_with_ghosty_": {
-    "message": "모두 설정되었습니다! Ghosty와 함께 시작해볼까요!"
   },
   "already_subscribed": {
     "message": "이미 가입함"
@@ -138,11 +138,11 @@
   "android_untrust": {
     "message": "실행 취소 "
   },
-  "anti_tracking_DESC": {
-    "message": "브라우저 환경을 더 강력하게 보호할 수 있도록 차단 해제된 트래커와 알 수 없는 트래커를 익명화합니다.   "
-  },
   "any_questions__anytime_": {
     "message": "질문이 있으십니까? 언제든지요!"
+  },
+  "apply_optimal_privacy_settings_": {
+    "message": "최적의 개인 정보 설정 적용:"
   },
   "are_you_sure_": {
     "message": "계속하시겠습니까?"
@@ -410,6 +410,9 @@
     "description": "Part of a confirmation dialog. Clicking this cancels the action.",
     "message": "취소 "
   },
+  "by_using_never_consent_you_let_website_owners_know_that_you_re_against_tracking_": {
+    "message": "동의하지 않음을 사용하면 웹사이트 소유자에게 추적에 반대한다는 것을 알릴 수 있습니다!"
+  },
   "cancel": {
     "message": "취소 "
   },
@@ -546,8 +549,8 @@
     "message": "CDN",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto_support@ghostery_com__support@ghostery_com__a___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "<a href=\"$${0}\" target=\"_blank\">FAQ</a>를 확인하시거나 <a href=\"mailto:support@ghostery.com\">support@ghostery.com</a>으로 메시지를 남겨주십시오. 어떤 문의든 궁금하신 점이 있다면 연락해 주세요!"
+  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
+    "message": "<a href=\"$${0}\" target=\"_blank\">FAQ</a>을 확인해 보시거나 <a href=\"mailto:$${1}\">$${2}</a>로 연락 주십시오. <br/> 어떤 문의든 궁금하신 점이 있으면 저희에게 연락해 주십시오!"
   },
   "choose_your_default_search": {
     "message": "기본 검색 기능 선택"
@@ -689,6 +692,9 @@
   "done": {
     "message": "완료"
   },
+  "done__go_with_ghosty_": {
+    "message": "완료! Ghosty와 함께 시작해 보세요!"
+  },
   "download_for_free": {
     "message": "무료 다운로드"
   },
@@ -708,6 +714,9 @@
   "enable_ghostery_to_get_started": {
     "message": "시작하려면 Ghostery를 활성화하십시오"
   },
+  "enable_never_consent_": {
+    "message": "동의하지 않음을 활성화하시겠습니까?"
+  },
   "enable_when_blacklisted": {
     "message": "이 기능을 사용하려면 사이트 제한을 실행 취소하십시오."
   },
@@ -725,6 +734,9 @@
   },
   "enhanced_anti_tracking": {
     "message": "추적 방지 "
+  },
+  "enhanced_autoconsent": {
+    "message": "동의하지 않음"
   },
   "error_email_forgot": {
     "message": "해당 이메일을 찾을 수 없습니다. 다시  시도해 보시겠습니까?"
@@ -785,8 +797,8 @@
   "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
     "message": "Ghostery는 인터넷 탐색 중 트래커의 추적을 중단하고 사용자의 개인정보를 보호하도록 설정되었습니다!"
   },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_for_their_own_profit_": {
-    "message": "Ghostery는 트래커의 추적을 중단하고 사용자가 프로파일링되는 것을 방지하여 트래커가 사용자 개인정보를 데이터 브로커에게 판매하여 이익을 추구하지 못하게 합니다."
+  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
+    "message": "Ghostery는 트래커의 추적을 중단하고 사용자가 프로파일링되는 것을 방지하여 트래커가 사용자의 개인 정보를 데이터 브로커에게 판매하지 못하게 합니다."
   },
   "ghostery_privacy_policy": {
     "message": "Ghostery 개인정보 취급방침"
@@ -813,8 +825,8 @@
     "message": "호스팅",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___whotracks_me__a__and_i_accept_the_ghostery__a_href____1___privacy_policy__a_": {
-    "message": "<a href=\"$${0}\">WhoTracks.Me</a>에 비개인 정보를 전송하는 데 동의하며 Ghostery <a href=\"$${1}\">개인정보 취급방침</a>에 동의합니다"
+  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
+    "message": "본인은 <a href=\"$${0}\">WhoTracks.Me</a>에 개인 정보가 아닌 정보를 전송하는 데 동의하며 <a href=\"$${1}\">Ghostery의 개인 정보 취급 방침</a>에 동의합니다"
   },
   "invalid_email_forgot": {
     "message": "죄송하지만 실제 이메일 주소를 입력해야 합니다."
@@ -822,14 +834,17 @@
   "invalid_email_login": {
     "message": "죄송하지만 실제 이메일 주소를 입력해야 합니다."
   },
-  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_tracker_information_to_whotracks_me__the_tracker_input_enables_ghostery_to_provide_real_time_intel_on_trackers_and_protection_to_the_entire_ghostery_user_community_": {
-    "message": "Ghostery는 트래커 정보를 whotracks.me로 전송하기로 결정한 모든 Ghostery 사용자의 작은 기여 덕분에 존재합니다 트래커를 입력하면 Ghostery가 트래커에 대한 실시간 정보를 제공하고 전체 Ghostery 사용자 커뮤니티를 보호할 수 있습니다."
+  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
+    "message": "트래커 정보를 WhoTracks.Me로 전송을 허락해 준 모든 Ghostery 사용자의 이러한 작은 기여들이 모여 Ghostery는 운영됩니다. 트래커를 입력하면 Ghostery가 트래커에 대한 실시간 정보를 제공하고 이렇게 전체 Ghostery 사용자 커뮤니티가 보호받을 수 있습니다."
   },
   "last_name_field_label": {
     "message": "성(옵션):"
   },
   "learn_more": {
     "message": "자세히 알아보기 "
+  },
+  "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
+    "message": "Ghostery가 귀하의 완전한 개인 정보 보호를 지원할 수 있게 하고 모든 팝업 및 추적을 거부하십시오. 또는 직접 실행할 수도 있습니다!"
   },
   "license_email": {
     "message": "이메일 "
@@ -871,12 +886,21 @@
     "message": "기타",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "more_information_on_@_0__": {
-    "message": "자세한 내용은 $${0}(을)를 참조하십시오."
+  "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
+    "message": "$${0} 어떠한 방법으로 작동하는지 그 자세한 정보는 Ghostery의 강령에서 확인해 보실 수 있습니다."
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
     "message": "Ghostery – 개인정보 보호용 광고 차단기"
+  },
+  "never_consent": {
+    "message": "동의하지 않음"
+  },
+  "never_consent_is_disabled": {
+    "message": "동의하지 않음이 비활성화됨"
+  },
+  "never_consent_is_enabled": {
+    "message": "동의하지 않음이 활성화됨"
   },
   "new_themes": {
     "message": "새로운 테마"
@@ -886,6 +910,9 @@
   },
   "next_or_start_trial": {
     "message": "다음/평가판 시작"
+  },
+  "no": {
+    "message": "아니요"
   },
   "no_such_email_password_combo": {
     "message": "해당 이메일과 암호 조합을 찾을 수 없습니다. 다시 시도해 보십시오."
@@ -918,8 +945,20 @@
   "off": {
     "message": "끄기 "
   },
+  "ok": {
+    "message": "확인 "
+  },
+  "ok__i_understand": {
+    "message": "네. 알겠습니다"
+  },
   "on": {
     "message": "켜기 "
+  },
+  "on_all_websites": {
+    "message": "모든 웹사이트에서"
+  },
+  "on_this_website": {
+    "message": "이 웹사이트에서"
   },
   "options_tracker_wheel_disabled": {
     "message": "브라우저 툴바에서 트래커 바퀴 비활성화"
@@ -1591,9 +1630,6 @@
   "smart_blocking": {
     "message": "스마트 브라우징"
   },
-  "smart_blocking_DESC": {
-    "message": "트래커를 자동으로 차단 및 차단 해제하여 페이지 성능을 최적화합니다."
-  },
   "social_media": {
     "message": "소셜 미디어 ",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
@@ -1768,17 +1804,14 @@
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "브라우저에 Ghostery 브라우저 확장이 설치되어 있지만 Ghosty가 낮잠을 자고 있군요."
   },
+  "tired_of_cookie_popups_": {
+    "message": "쿠키 팝업이 너무 많습니까?"
+  },
   "too_many_failed_logins_text": {
     "message": "로그인 실패 횟수가 너무 많습니다. 1시간 후에 다시 시도하십시오."
   },
   "too_many_password_resets_text": {
     "message": "암호 재설정을 너무 많이 요청했습니다. 한 시간 후에 다시 시도하세요."
-  },
-  "tooltip_ad_block_on": {
-    "message": "광고가 차단되었습니다."
-  },
-  "tooltip_anti_track_on": {
-    "message": "개인 데이터 항목이 익명화되었습니다."
   },
   "tooltip_body_in_cliqz": {
     "message": "기능이 Cliqz에서 기본적으로 활성화되어 있습니다."
@@ -1794,9 +1827,6 @@
   },
   "tooltip_resume": {
     "message": "Ghostery 다시 시작 "
-  },
-  "tooltip_smart_block_on": {
-    "message": "트래커 차단 기능이 페이지 성능을 최적화할 수 있도록 조정되었습니다."
   },
   "tooltip_trust": {
     "message": "이 사이트에서 항상 트래커를 허용합니다."
@@ -1825,6 +1855,9 @@
   "trackers_detected": {
     "message": "탐지됨"
   },
+  "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
+    "message": "이 웹사이트에서 Ghostery가 탐지한 추적기:&nbsp;$${0}"
+  },
   "trackers_preview": {
     "message": "트래커 미리보기"
   },
@@ -1844,11 +1877,11 @@
     "message": "알 수 없음 ",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "welcome_to": {
-    "message": "환영합니다"
+  "welcome_to_ghostery": {
+    "message": "Ghostery를 시작합니다"
   },
   "what_is_whotracks_me_": {
-    "message": "whotracks.me란?"
+    "message": "WhoTracks.Me란?"
   },
   "white_black_list_error_invalid_url": {
     "message": "유효한 URL 또는 와일드카드를 입력하세요."
@@ -1860,14 +1893,20 @@
     "description": "Options page site trust error message shown when trusting a URL that is already in the trusted sites list.",
     "message": "이 사이트는 이미 신뢰할 수 있는 사이트에 등록되어 있습니다."
   },
-  "whotracks_me__operated_by_ghostery__is_the_most_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "Ghostery가 운영하는 WhoTracks.me는 트래커에 대한 가장 포괄적인 글로벌 리소스로서 웹 추적에 투명성을 가져다 줍니다."
+  "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "Ghostery가 운영하는 WhoTracks.Me는 Ghostery의 AI 추적 방지 기술을 필수 부분으로 작동합니다. 이는 트래커에 대한 가장 포괄적인 글로벌 리소스로서 웹 추적에 투명성을 가져다 줍니다."
   },
-  "with_ghostery_enabled_you_instantly_browser_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Ghostery를 사용하면 웹을 즉시 보다 안전하고 빠르게 탐색할 수 있으며 성가신 광고도 줄어듭니다."
+  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
+    "message": "Ghostery를 사용하면 웹을 즉시 보다 안전하고 빠르게 탐색할 수 있으며 성가신 광고들도 줄어들게 됩니다."
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_settings_": {
-    "message": "언제든지 마음을 바꾸어 Ghostery가 Ghostery 설정에서 트래커 추적을 시작하도록 할 수 있습니다."
+  "yes": {
+    "message": "예 "
+  },
+  "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
+    "message": "해당 설정은&nbsp;<strong>Ghostery 제어판</strong>에서 언제든지 변경할 수 있습니다."
+  },
+  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
+    "message": "언제든지 결정을 바꾸실 수 있으며, Ghostery 설정에서 Ghostery가 트래커 추적을 시작하도록 변경할 수 있습니다."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Ghostery 활성화를 건너뛰기로 하셨습니다!"
